[project]
name = "neondb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "ruff>=0.11.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.54",
]
